--- a/app/assets/stylesheets/xroom.css.scss
+++ b/app/assets/stylesheets/xroom.css.scss
@@ -58,9 +58,17 @@ a.xroom_entire_room_right_fill-div {
 
 #xroom_entire_room_btn{
   position:fixed;
-  z-index:4;
-  top:10%;
+  z-index:1501;
+  top:40px;
   left:38%;
   padding: 6px 46px;
+}
+
+#xroom_entire_room_btn_blue{
+  font-size:24px;
+  text-align: center;
+  padding: 20px 100px;
+
+
 }
 
