Add overflow hidden to gridItem so  long descriptions don't disrupt the grid flow

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -414,6 +414,7 @@ table.generalGrid{
   border:1px solid #ebebeb;
   display:inline-block;
   margin:9px 5px;
+  overflow:hidden;
   
 }
 /*center the picture*/
