--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,8 @@
       <li><%= link_to 'Join The Team',about_path %>       </li>
       <li><%= link_to 'Partnerships',about_path %>         </li>
       <li><%= link_to 'Contact Us',about_path %>            </li>
-      <li><a id="feedbackLink" title="Click to send feedback" href="#" onclick="lightbox('Send feedback from a server-side page!');return false;">Send Feedback!</a></li>
+      <li><a href="javascript:feedback_lightbox();">Send Feedback!</a></li>
+
     </ul>
 
   </small>
