--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -5,4 +5,9 @@
   <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
   To get help on this sample app, see the
   <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+
+  <%= cl_image_tag("help_firt_image.png", width: 300,height:300,:crop => :fit ,:quality => 50,:default_image => "default_image_all.png")%>
+
+
+
 </p>
