--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,13 +1,390 @@
 <% provide(:title, 'Help') %>
-<h1>Help</h1>
-<p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-  To get help on this sample app, see the
-  <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
 
-  <%= cl_image_tag("help_firt_image.png", width: 300,height:300,:crop => :fit ,:quality => 50,:default_image => "default_image_all.png")%>
+<div class="container-fluid">
+  <div class="row-fluid">
+
+    <!-- AFFIX -->
+    <div class="span3">
+      <ul class="nav nav-list">
+        <li class="nav-header">DECORATE</li>
+        <li>
+          <a href="#change_objects">Change Objects</a>
+        </li>
+        <li>
+          <a href="#">Change Theme</a>
+        </li>
+        <li>
+          <a href="#">Save &amp; Cancel Changes</a>
+        </li>
+        <li>
+          <a href="#">Add &amp; Remove Objects</a>
+        </li>
+        <li class="divider"></li>
+        <li class="nav-header">ORGANIZE</li>
+        <li>
+          <a href="#">Discover Bookmarks</a>
+        </li>
+        <li>
+          <a href="#">Add Bookmark</a>
+        </li>
+        <li>
+          <a href="#">Delete Bookmark</a>
+        </li>
+        <li>
+          <a href="#">Active Sites</a>
+        </li>
+        <li class="divider"></li>
+        <li class="nav-header">SHARE</li>
+        <li>
+          <a href="#">Key Requests</a>
+        </li>
+        <li>
+          <a href="#">Upload Photos</a>
+        </li>
+        <li>
+          <a href="#">Latest Activities</a>
+        </li>
+        <li>
+          <a href="#">Share Activities</a>
+        </li>
+        <li class="divider"></li>
+        <li class="nav-header">PROFILE SETTINGS</li>
+        <li>
+          <a href="#">Change Username or Password</a>
+        </li>
+        <li>
+          <a href="#">Edit Profile Information</a>
+        </li>
+        <li>
+          <a href="#">Change Photo</a>
+        </li>
+        <li class="divider"></li>
+        <li>
+          <a href="#">FAQ</a>
+        </li>
+      </ul>
+    </div>
 
 
+    <!-- MAIN -->
+    <div class="span9">
 
-</p>
+      <!-- PAGE 1 -->
+      <h1>Decorate</h1>
+
+      <!-- 1.1 -->
+      <h3 id="change_objects">Change Objects</h3>
+      <p>
+        1.&nbsp;&nbsp;On the toolbar Click the Edit Button</br>
+        2.&nbsp;&nbsp;Choose the object you want to change and click</br>
+        3.&nbsp;&nbsp;Choose the one you'd like to preview, if you can't find one you like you can</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;search for the object and use filters to help you find the object.</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+      <!-- 1.2 -->
+      <h3>Change Theme</h3>
+      <p>
+        1.&nbsp;&nbsp;On the toolbar Click the Edit Button</br>
+        2.&nbsp;&nbsp;Select the Themes tab</br>
+        3.&nbsp;&nbsp;Choose the theme you'd like to preview. If you can't find one you like, you can<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;search for themes that match a keyword or use filters to help you find one.</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+      <!-- 1.3 -->
+      <h3>Save &amp; Cancel Changes</h3>
+
+      <!-- 1.3.1 -->
+      <h5>Save Changes</h5>
+      <p>
+        1.&nbsp;&nbsp;Once you change the object you want, click on the save button to keep all changes made in your room.</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+      <!-- 1.3.2 -->
+      <h5>Cancel Changes</h5>
+      <p>
+        2.&nbsp&nbsp;Click "cancel changes" button if you don't want to keep any changes made to your room</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: you can change multiple objects and save all the changes once you are done.</em></br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+      <!-- 1.4 -->
+      <h3>Add &amp; Remove Objects</h3>
+
+      <!-- 1.4.1 -->
+      <h5>Remove Object</h5>
+      <p>
+        1.&nbsp;&nbsp;Click the edit button on the toolbar and rollover an object you want to remove, then click on the</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;trash icon to delete.</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: Removing this object does not delete its contents. All your bookmarks will be restored if you decide to add the object.</em></br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+      <!-- 1.4.2 -->
+      <h5>Add Object</h5>
+      <p>
+        2.&nbsp;&nbsp;To add the object back, click on the edit button and the deleted object will appear greyed out with</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;plus sign (click on it to add the object back to your room)</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+      <!-- 2 -->
+      <h1>Organize</h1>
+
+      <!-- 2.1 -->
+      <h3>Discover Bookmarks</h3>
+      <p>
+        1.&nbsp;&nbsp;Click on any object to open up the bookmark interface</br>
+        2.&nbsp;&nbsp;Click on Discover to view all the available sites we have for that category (click to preview the site)</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+      <!-- 2.2 -->
+      <h3>Add ;&amp Create New Bookmarks</h3>
+      <p>
+        1.&nbsp;&nbsp;Click on the plus (add icon) on the top right corner to save bookmarks to your selected category.</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Checkmark icon signifies that it has been added.</br>
+        2.&nbsp;&nbsp;If you can't find a site in our library, you have the option to add your own bookmark.</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 2.3 -->
+      <h3>Delete Bookmarks</h3>
+      <p>
+        1.&nbsp;&nbsp;Go to My Bookmarks tab and to delete a bookmark simply click on the trashbox button on</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the top right corner.</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 2.4 -->
+      <h3>Active Sites</h3>
+      <p>
+        1.&nbsp;&nbsp;To view all your active sites click on the star icon on your toolbar.</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 3 -->
+      <h1>Share</h1>
+
+
+      <!-- 3.1 -->
+      <h3>Key Request</h3>
+      <p>
+        1.&nbsp;&nbsp;Click on the social icon in the toolbar to open up the social interface</br>
+        2.&nbsp;&nbsp;Click on Key Request tab</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: You will get a red notification when you have a key request pending</em></br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 3.2 -->
+      <h3>Friend's Room</h3>
+
+      <!-- 3.2.1 -->
+      <h5>View Room</h5>
+      <p>
+        1.&nbsp;&nbsp;Click on the gear icon to view your friend's room</br>
+        2.&nbsp;&nbsp;Once in the room you can click on the objects to view your friend's bookmarks and more.</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 3.2.2 -->
+      <h5>View profile info and photos</h5>
+      <p>
+        1.&nbsp;&nbsp;Once in the friend's tab click on friend's name or picture to open up their profile page</br>
+        2.&nbsp;&nbsp;View and like photos</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+      <!-- 3.3 -->
+      <h3>Upload your photos</h3>
+      <p>
+        1.&nbsp;&nbsp;Open the photo page on your social tab</br>
+        2.&nbsp;&nbsp;Click on the plus sign to upload photos or click on the upload photo button</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 3.4 -->
+      <h3>Your friend's Room</h3>
+      <p>
+        1.&nbsp;&nbsp;Click on the gear icon to view your friend's room</br>
+        2.&nbsp;&nbsp;Once in the room you can click on the objects to view your friend's bookmarks and more.</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 4 -->
+      <h1>Profile Settings</h1>
+
+      <!-- 4.1 -->
+      <h3>Change Username or Password</h3>
+      <p>
+        1.&nbsp;&nbsp;Click the dropdown arrow on your toolbar next to your username</br>
+        2.&nbsp;&nbsp;Click on Account Settings</br>
+        3.&nbsp;&nbsp;Change your username, password, and other information</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 4.2 -->
+      <h3>Edit Profile Information</h3>
+      <p>
+        1.&nbsp;&nbsp;Click the Profile Tab to change your general information</br>
+        2.&nbsp;&nbsp;Once you are done click save changes</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 4.3 -->
+      <h3>Change Photo</h3>
+      <p>
+        1.&nbsp;&nbsp;Click the Edit your Profile Picture link</br>
+        2.&nbsp;&nbsp;Enter a name and click Browse... to select the photo to upload</br>
+        3.&nbsp;&nbsp;Once you are done click Upload Photo</br>
+      </p>
+      <div>
+        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+      </div>
+      </br>
+
+
+      <!-- 5 -->
+      <h1>Frequently Asked Questions</h1>
+      <h3>Help Center</h3>
+
+      <p>
+        Q.nbsp;nbsp;How do I change my profile picture?</br>
+        A.nbsp;nbsp;Click on Account Settings
+      </p>
+
+      <p>
+        Q.nbsp;nbsp;How do I invite my facebook friends to join mywebroom?</br>
+        A.nbsp;nbsp;Click on Account Settings
+      </p>
+
+      <p>
+        Q.nbsp;nbsp;How do I share my bookmarks?</br>
+        A.nbsp;nbsp;Click on Account Settings
+      </p>
+
+      <p>
+        Q.nbsp;nbsp;How do I design my own room?</br>
+        A.nbsp;nbsp;Click on Account Settings
+      </p>
+
+      <p>
+        Q.nbsp;nbsp;How do I add my own objects to my room?</br>
+        A.nbsp;nbsp;Click on Account Settings
+      </p>
+
+      <p>
+        Q.nbsp;nbsp;How do I access my bookmarks?</br>
+        A.nbsp;nbsp;Click on Account Settings
+      </p>
+
+      <p>
+        Q.nbsp;nbsp;How do I edit my existing photos?</br>
+        A.nbsp;nbsp;Click on Account Settings
+      </p>
+    </div>
+
+  </div>
+</div>
