--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,73 +1,86 @@
 <% provide(:title, 'Help') %>
 
-<div class="container-fluid">
-  <div class="row-fluid">
+
+<div class="container">
+  <div class="row">
 
     <!-- AFFIX -->
-    <div class="span3">
-      <ul class="nav nav-list">
+    <div class="span4 help-sidebar">
+      <ul class="nav nav-list" data-spy="affix">
         <li class="nav-header">DECORATE</li>
         <li>
+          <!-- 1.1 -->
           <a href="#change_objects">Change Objects</a>
         </li>
         <li>
-          <a href="#">Change Theme</a>
+          <!-- 1.2 -->
+          <a href="#change_theme">Change Theme</a>
         </li>
         <li>
-          <a href="#">Save &amp; Cancel Changes</a>
+          <!-- 1.3 -->
+          <a href="#save_and_cancel_changes">Save &amp; Cancel Changes</a>
         </li>
         <li>
-          <a href="#">Add &amp; Remove Objects</a>
+          <!-- 1.4 -->
+          <a href="#add_and_remove_objects">Add &amp; Remove Objects</a>
         </li>
         <li class="divider"></li>
         <li class="nav-header">ORGANIZE</li>
         <li>
-          <a href="#">Discover Bookmarks</a>
+          <!-- 2.1 -->
+          <a href="#discover_bookmarks">Discover Bookmarks</a>
         </li>
         <li>
-          <a href="#">Add Bookmark</a>
+          <!-- 2.2 -->
+          <a href="#add_and_create_bookmarks">Add &amp; Create Bookmarks</a>
         </li>
         <li>
-          <a href="#">Delete Bookmark</a>
+          <!-- 2.3 -->
+          <a href="#delete_bookmarks">Delete Bookmark</a>
         </li>
         <li>
-          <a href="#">Active Sites</a>
+          <!-- 2.4 -->
+          <a href="#active_sites">Active Sites</a>
         </li>
         <li class="divider"></li>
         <li class="nav-header">SHARE</li>
         <li>
-          <a href="#">Key Requests</a>
+          <!-- 3.1 -->
+          <a href="#key_requests">Key Requests</a>
         </li>
         <li>
-          <a href="#">Upload Photos</a>
+          <!-- 3.2 -->
+          <a href="#friends_room">Friend's Room</a>
         </li>
         <li>
-          <a href="#">Latest Activities</a>
-        </li>
-        <li>
-          <a href="#">Share Activities</a>
+          <!-- 3.3 -->
+          <a href="#upload_your_photos">Upload Your Photos</a>
         </li>
         <li class="divider"></li>
         <li class="nav-header">PROFILE SETTINGS</li>
         <li>
-          <a href="#">Change Username or Password</a>
+          <!-- 4.1 -->
+          <a href="#change_username_or_password">Change Username or Password</a>
         </li>
         <li>
-          <a href="#">Edit Profile Information</a>
+          <!-- 4.2 -->
+          <a href="#edit_profile_information">Edit Profile Information</a>
         </li>
         <li>
-          <a href="#">Change Photo</a>
+          <!-- 4.3 -->
+          <a href="#change_photo">Change Photo</a>
         </li>
         <li class="divider"></li>
         <li>
-          <a href="#">FAQ</a>
+          <!-- 5 -->
+          <a href="#faq">FAQ</a>
         </li>
       </ul>
     </div>
 
 
     <!-- MAIN -->
-    <div class="span9">
+    <div class="span8 help-main">
 
       <!-- PAGE 1 -->
       <h1>Decorate</h1>
@@ -94,7 +107,7 @@
       </br>
 
       <!-- 1.2 -->
-      <h3>Change Theme</h3>
+      <h3 id="change_theme">Change Theme</h3>
       <p>
         1.&nbsp;&nbsp;On the toolbar Click the Edit Button</br>
         2.&nbsp;&nbsp;Select the Themes tab</br>
@@ -115,7 +128,7 @@
       </br>
 
       <!-- 1.3 -->
-      <h3>Save &amp; Cancel Changes</h3>
+      <h3 id="save_and_cancel_changes">Save and Cancel Changes</h3>
 
       <!-- 1.3.1 -->
       <h5>Save Changes</h5>
@@ -139,7 +152,7 @@
       </br>
 
       <!-- 1.4 -->
-      <h3>Add &amp; Remove Objects</h3>
+      <h3 id="add_and_remove_objects">Add and Remove Objects</h3>
 
       <!-- 1.4.1 -->
       <h5>Remove Object</h5>
@@ -168,7 +181,7 @@
       <h1>Organize</h1>
 
       <!-- 2.1 -->
-      <h3>Discover Bookmarks</h3>
+      <h3 id="discover_bookmarks">Discover Bookmarks</h3>
       <p>
         1.&nbsp;&nbsp;Click on any object to open up the bookmark interface</br>
         2.&nbsp;&nbsp;Click on Discover to view all the available sites we have for that category (click to preview the site)</br>
@@ -183,7 +196,7 @@
       </br>
 
       <!-- 2.2 -->
-      <h3>Add ;&amp Create New Bookmarks</h3>
+      <h3 id="add_and_create_bookmarks">Add and Create Bookmarks</h3>
       <p>
         1.&nbsp;&nbsp;Click on the plus (add icon) on the top right corner to save bookmarks to your selected category.</br>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Checkmark icon signifies that it has been added.</br>
@@ -200,7 +213,7 @@
 
 
       <!-- 2.3 -->
-      <h3>Delete Bookmarks</h3>
+      <h3 id="delete_bookmarks">Delete Bookmarks</h3>
       <p>
         1.&nbsp;&nbsp;Go to My Bookmarks tab and to delete a bookmark simply click on the trashbox button on</br>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the top right corner.</br>
@@ -212,7 +225,7 @@
 
 
       <!-- 2.4 -->
-      <h3>Active Sites</h3>
+      <h3 id="active_sites">Active Sites</h3>
       <p>
         1.&nbsp;&nbsp;To view all your active sites click on the star icon on your toolbar.</br>
       </p>
@@ -227,7 +240,7 @@
 
 
       <!-- 3.1 -->
-      <h3>Key Request</h3>
+      <h3 id="key_requests">Key Requests</h3>
       <p>
         1.&nbsp;&nbsp;Click on the social icon in the toolbar to open up the social interface</br>
         2.&nbsp;&nbsp;Click on Key Request tab</br>
@@ -244,7 +257,7 @@
 
 
       <!-- 3.2 -->
-      <h3>Friend's Room</h3>
+      <h3 id="friends_room">Friend's Room</h3>
 
       <!-- 3.2.1 -->
       <h5>View Room</h5>
@@ -278,7 +291,7 @@
       </br>
 
       <!-- 3.3 -->
-      <h3>Upload your photos</h3>
+      <h3 id="upload_your_photos">Upload your photos</h3>
       <p>
         1.&nbsp;&nbsp;Open the photo page on your social tab</br>
         2.&nbsp;&nbsp;Click on the plus sign to upload photos or click on the upload photo button</br>
@@ -289,23 +302,12 @@
       </br>
 
 
-      <!-- 3.4 -->
-      <h3>Your friend's Room</h3>
-      <p>
-        1.&nbsp;&nbsp;Click on the gear icon to view your friend's room</br>
-        2.&nbsp;&nbsp;Once in the room you can click on the objects to view your friend's bookmarks and more.</br>
-      </p>
-      <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
-      </div>
-      </br>
-
 
       <!-- 4 -->
       <h1>Profile Settings</h1>
 
       <!-- 4.1 -->
-      <h3>Change Username or Password</h3>
+      <h3 id="change_username_or_password">Change Username or Password</h3>
       <p>
         1.&nbsp;&nbsp;Click the dropdown arrow on your toolbar next to your username</br>
         2.&nbsp;&nbsp;Click on Account Settings</br>
@@ -322,7 +324,7 @@
 
 
       <!-- 4.2 -->
-      <h3>Edit Profile Information</h3>
+      <h3 id="edit_profile_information">Edit Profile Information</h3>
       <p>
         1.&nbsp;&nbsp;Click the Profile Tab to change your general information</br>
         2.&nbsp;&nbsp;Once you are done click save changes</br>
@@ -334,7 +336,7 @@
 
 
       <!-- 4.3 -->
-      <h3>Change Photo</h3>
+      <h3 id="change_photo">Change Photo</h3>
       <p>
         1.&nbsp;&nbsp;Click the Edit your Profile Picture link</br>
         2.&nbsp;&nbsp;Enter a name and click Browse... to select the photo to upload</br>
@@ -347,7 +349,7 @@
 
 
       <!-- 5 -->
-      <h1>Frequently Asked Questions</h1>
+      <h1 id="faq">Frequently Asked Questions</h1>
       <h3>Help Center</h3>
 
       <p>
