--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -88,44 +88,37 @@
       <!-- 1.1 -->
       <h3 id="change_objects">Change Objects</h3>
       <p>
-        1.&nbsp;&nbsp;On the toolbar Click the Edit Button</br>
-        2.&nbsp;&nbsp;Choose the object you want to change and click</br>
-        3.&nbsp;&nbsp;Choose the one you'd like to preview, if you can't find one you like you can</br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;search for the object and use filters to help you find the object.</br>
+        1.&nbsp;&nbsp;Click the <em>Room</em> button in the toolbar</br>
+        2.&nbsp;&nbsp;Click the object you want to change</br>
+        3.&nbsp;&nbsp;Choose the one you'd like to preview. If you don't see one you like, you can</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;search for objects that match a keyword or use filters to help you find one</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_room.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
-      </div>
-      </br>
-      <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_object.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
       <!-- 1.2 -->
       <h3 id="change_theme">Change Theme</h3>
       <p>
-        1.&nbsp;&nbsp;On the toolbar Click the Edit Button</br>
-        2.&nbsp;&nbsp;Select the Themes tab</br>
-        3.&nbsp;&nbsp;Choose the theme you'd like to preview. If you can't find one you like, you can<br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;search for themes that match a keyword or use filters to help you find one.</br>
+        1.&nbsp;&nbsp;Click the <em>Room</em> button in the toolbar</br>
+        2.&nbsp;&nbsp;Select the <em>Themes</em> tab</br>
+        3.&nbsp;&nbsp;Choose the theme you'd like to preview. If you don't see one you like, you can<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;search for themes that match a keyword or use filters to help you find one</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_room.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_theme.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
-      <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
-      </div>
-      </br>
+
 
       <!-- 1.3 -->
       <h3 id="save_and_cancel_changes">Save and Cancel Changes</h3>
@@ -133,21 +126,22 @@
       <!-- 1.3.1 -->
       <h5>Save Changes</h5>
       <p>
-        1.&nbsp;&nbsp;Once you change the object you want, click on the save button to keep all changes made in your room.</br>
+        1.&nbsp;&nbsp;After you choose the object you want, click on the <em>Save Design</em> button to keep all changes</br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;made to your room</br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: you can change multiple objects and save all the changes once you are done</em></br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_save.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
       <!-- 1.3.2 -->
       <h5>Cancel Changes</h5>
       <p>
-        2.&nbsp&nbsp;Click "cancel changes" button if you don't want to keep any changes made to your room</br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: you can change multiple objects and save all the changes once you are done.</em></br>
+        2.&nbsp&nbsp;Click the <em>Cancel Changes</em> button if you don't want to keep any changes made to your room</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_cancel.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
@@ -157,57 +151,57 @@
       <!-- 1.4.1 -->
       <h5>Remove Object</h5>
       <p>
-        1.&nbsp;&nbsp;Click the edit button on the toolbar and rollover an object you want to remove, then click on the</br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;trash icon to delete.</br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: Removing this object does not delete its contents. All your bookmarks will be restored if you decide to add the object.</em></br>
+        1.&nbsp;&nbsp;Click the <em>Room</em> button in the toolbar and click an object you want to remove</br>
+        2.&nbsp;&nbsp;Click the <em>Remove Object</em> button</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: Removing this object does not delete its contents. All your bookmarks will be restored</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if you decide to re-add the object</em></br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_remove.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
       <!-- 1.4.2 -->
       <h5>Add Object</h5>
       <p>
-        2.&nbsp;&nbsp;To add the object back, click on the edit button and the deleted object will appear greyed out with</br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;plus sign (click on it to add the object back to your room)</br>
+        2.&nbsp;&nbsp;To add the object back, simply choose a new design, click it, and then click <em>Save Design</em></br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_object.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
       <!-- 2 -->
+      </br>
       <h1>Organize</h1>
 
       <!-- 2.1 -->
       <h3 id="discover_bookmarks">Discover Bookmarks</h3>
       <p>
         1.&nbsp;&nbsp;Click on any object to open up the bookmark interface</br>
-        2.&nbsp;&nbsp;Click on Discover to view all the available sites we have for that category (click to preview the site)</br>
+        2.&nbsp;&nbsp;Click on <em>Discover</em> to view all the available sites we have for that category</br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(click a site's icon to preview that site)</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_discover_a.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_discover_b.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
       <!-- 2.2 -->
       <h3 id="add_and_create_bookmarks">Add and Create Bookmarks</h3>
       <p>
-        1.&nbsp;&nbsp;Click on the plus (add icon) on the top right corner to save bookmarks to your selected category.</br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Checkmark icon signifies that it has been added.</br>
-        2.&nbsp;&nbsp;If you can't find a site in our library, you have the option to add your own bookmark.</br>
+        1.&nbsp;&nbsp;Click on the plus (add icon) in the top right corner to save bookmarks to your selected</br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;category. A checkmark icon signifies that it has been added</br>
+        2.&nbsp;&nbsp;If you can't find a site in our library, you have the option to add your own bookmark</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_add_bookmark.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_add_url.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
@@ -215,11 +209,11 @@
       <!-- 2.3 -->
       <h3 id="delete_bookmarks">Delete Bookmarks</h3>
       <p>
-        1.&nbsp;&nbsp;Go to My Bookmarks tab and to delete a bookmark simply click on the trashbox button on</br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the top right corner.</br>
+        1.&nbsp;&nbsp;Go to the <em>My Bookmarks</em> tab and simply click on the trashbox button in</br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the top right corner to delete it.</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_delete_bookmark.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
@@ -227,15 +221,16 @@
       <!-- 2.4 -->
       <h3 id="active_sites">Active Sites</h3>
       <p>
-        1.&nbsp;&nbsp;To view all your active sites click on the star icon on your toolbar.</br>
+        1.&nbsp;&nbsp;To view all your active sites click on the star icon on your toolbar</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_active_sites.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
 
       <!-- 3 -->
+      </br>
       <h1>Share</h1>
 
 
@@ -243,15 +238,15 @@
       <h3 id="key_requests">Key Requests</h3>
       <p>
         1.&nbsp;&nbsp;Click on the social icon in the toolbar to open up the social interface</br>
-        2.&nbsp;&nbsp;Click on Key Request tab</br>
+        2.&nbsp;&nbsp;Click on the <em>Key Request</em> tab</br>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: You will get a red notification when you have a key request pending</em></br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_social.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_key_requests.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
@@ -262,15 +257,15 @@
       <!-- 3.2.1 -->
       <h5>View Room</h5>
       <p>
-        1.&nbsp;&nbsp;Click on the gear icon to view your friend's room</br>
+        1.&nbsp;&nbsp;Click on the gear icon and then <em>View Room</em>to checkout your friend's room</br>
         2.&nbsp;&nbsp;Once in the room you can click on the objects to view your friend's bookmarks and more.</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_gear_icon.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("full_room.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
@@ -281,12 +276,13 @@
         1.&nbsp;&nbsp;Once in the friend's tab click on friend's name or picture to open up their profile page</br>
         2.&nbsp;&nbsp;View and like photos</br>
       </p>
+      </br>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("profile.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("photos.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
@@ -297,28 +293,33 @@
         2.&nbsp;&nbsp;Click on the plus sign to upload photos or click on the upload photo button</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_upload_photo_a.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+      </div>
+      </br>
+      <div>
+        <%= cl_image_tag("click_upload_photo_b.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
 
-
       <!-- 4 -->
+      </br>
       <h1>Profile Settings</h1>
 
       <!-- 4.1 -->
       <h3 id="change_username_or_password">Change Username or Password</h3>
       <p>
         1.&nbsp;&nbsp;Click the dropdown arrow on your toolbar next to your username</br>
-        2.&nbsp;&nbsp;Click on Account Settings</br>
-        3.&nbsp;&nbsp;Change your username, password, and other information</br>
+        2.&nbsp;&nbsp;Click on <em>Account Settings</em></br>
+        3.&nbsp;&nbsp;Change your username or password</br>
+        2.&nbsp;&nbsp;Once you are done click <em>Save Changes</em></br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_account_settings_a.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_account_settings_b.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
@@ -330,62 +331,63 @@
         2.&nbsp;&nbsp;Once you are done click save changes</br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_account_settings_c.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
+
 
 
       <!-- 4.3 -->
       <h3 id="change_photo">Change Photo</h3>
       <p>
-        1.&nbsp;&nbsp;Click the Edit your Profile Picture link</br>
-        2.&nbsp;&nbsp;Enter a name and click Browse... to select the photo to upload</br>
-        3.&nbsp;&nbsp;Once you are done click Upload Photo</br>
+        1.&nbsp;&nbsp;Click the <em>Edit your Profile Picture</em> link</br>
+        2.&nbsp;&nbsp;Enter a name and click <em>Browse...</em> to select the photo to upload</br>
+        3.&nbsp;&nbsp;Once you are done click <em>Upload Photo</em></br>
       </p>
       <div>
-        <img src="//app.divshot.com/img/placeholder-100x100.gif">
+        <%= cl_image_tag("click_account_settings_d.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+      </div>
+      </br>
+      <div>
+        <%= cl_image_tag("click_set_as_profile_picture.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+      </div>
+      </br>
+      <div>
+        <%= cl_image_tag("click_account_password.png", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
       </div>
       </br>
 
-
       <!-- 5 -->
+      </br>
       <h1 id="faq">Frequently Asked Questions</h1>
       <h3>Help Center</h3>
 
+      </br>
       <p>
-        Q.nbsp;nbsp;How do I change my profile picture?</br>
-        A.nbsp;nbsp;Click on Account Settings
+        <div class="text-info">Q.&nbsp;&nbsp;How do I invite my facebook friends to join mywebroom?</div></br>
+        <div>A.&nbsp;&nbsp;Click the social icon, then click the <em>Friends</em> or <em>Key Requests</em> tab. You can then click the blue <em>Invite Friends with Facebook</em> button</div>
       </p>
-
+      </br>
       <p>
-        Q.nbsp;nbsp;How do I invite my facebook friends to join mywebroom?</br>
-        A.nbsp;nbsp;Click on Account Settings
+        <div class="text-info">Q.&nbsp;&nbsp;How do I share my bookmarks?</div></br>
+        <div>A.&nbsp;&nbsp;Click on Account Settings</div>
       </p>
-
+      </br>
       <p>
-        Q.nbsp;nbsp;How do I share my bookmarks?</br>
-        A.nbsp;nbsp;Click on Account Settings
+        <div class="text-info">Q.&nbsp;&nbsp;How do I design my own room?</div></br>
+        <div>A.&nbsp;&nbsp;Click on Account Settings</div>
       </p>
-
+      </br>
       <p>
-        Q.nbsp;nbsp;How do I design my own room?</br>
-        A.nbsp;nbsp;Click on Account Settings
+        <div class="text-info">Q.&nbsp;&nbsp;How do I add my own objects to my room?</div></br>
+        <div>A.&nbsp;&nbsp;Click on Account Settings</div>
       </p>
-
+      </br>
       <p>
-        Q.nbsp;nbsp;How do I add my own objects to my room?</br>
-        A.nbsp;nbsp;Click on Account Settings
+        <div class="text-info">Q.&nbsp;&nbsp;How do I access my bookmarks?</div></br>
+        <div>A.&nbsp;&nbsp;Click on Account Settings</div>
       </p>
-
-      <p>
-        Q.nbsp;nbsp;How do I access my bookmarks?</br>
-        A.nbsp;nbsp;Click on Account Settings
-      </p>
-
-      <p>
-        Q.nbsp;nbsp;How do I edit my existing photos?</br>
-        A.nbsp;nbsp;Click on Account Settings
-      </p>
+      </br>
     </div>
 
   </div>
