changes answer to TODO for incorrect FAQ answers

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -370,22 +370,22 @@
       </br>
       <p>
         <div class="text-info">Q.&nbsp;&nbsp;How do I share my bookmarks?</div></br>
-        <div>A.&nbsp;&nbsp;Click on Account Settings</div>
+        <div>A.&nbsp;&nbsp;TODO</div>
       </p>
       </br>
       <p>
         <div class="text-info">Q.&nbsp;&nbsp;How do I design my own room?</div></br>
-        <div>A.&nbsp;&nbsp;Click on Account Settings</div>
+        <div>A.&nbsp;&nbsp;TODO</div>
       </p>
       </br>
       <p>
         <div class="text-info">Q.&nbsp;&nbsp;How do I add my own objects to my room?</div></br>
-        <div>A.&nbsp;&nbsp;Click on Account Settings</div>
+        <div>A.&nbsp;&nbsp;TODO</div>
       </p>
       </br>
       <p>
         <div class="text-info">Q.&nbsp;&nbsp;How do I access my bookmarks?</div></br>
-        <div>A.&nbsp;&nbsp;Click on Account Settings</div>
+        <div>A.&nbsp;&nbsp;TODO</div>
       </p>
       </br>
     </div>
