--- a/app/views/shop/_shop_nav.html.erb
+++ b/app/views/shop/_shop_nav.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs" id="shop-main-nav">
   <li>
     <%= link_to "OBJECTS", shop_index_path() %>
   </li>
