--- a/app/views/shop/show_bookmark.html.erb
+++ b/app/views/shop/show_bookmark.html.erb
@@ -1,12 +1,6 @@
 <div class="shop_container">
   <%= render 'shop_nav' %>
 
-  <!--<div class="shop_upper_container" data-shop-type="<%= @entity_type %>">-->
-    <!--<%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:@came_from,entity_type:@entity_type,entity_id:@bookmark.id),:class => "blue_button blue_button_light"%>-->
-    <!--<a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>-->
-    <!--<a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>-->
-    <!---->
-  <!--</div>-->
   <div class="shop_container_box">
 
       <div class="shop_left">
@@ -53,6 +47,9 @@
 <br/>
 
 <div class="shop_container">
+  <div class="shop_related_items">
+    Related Bookmarks
+  </div>
   <div class="shop_table">
     <table>
       <% if @bookmark_length > 0 %>
