--- a/app/views/shop/show_bundle.html.erb
+++ b/app/views/shop/show_bundle.html.erb
@@ -19,9 +19,9 @@
         </div>
         <p class="shop_main_image_name">
           <% if @bundle.image_name.blank?  %>
-              <%= cl_image_tag("default_image_all.png", width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png")%>
+              <%= cl_image_tag("default_image_all.png", width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png")%>
           <% else %>
-              <%= cl_image_tag(@bundle.image_name , width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png") %>
+              <%= cl_image_tag(@bundle.image_name , width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png") %>
           <% end%>
 
         </p>
@@ -49,6 +49,9 @@
 
 
 <div class="shop_container">
+  <div class="shop_related_items">
+    Related Bundles
+  </div>
   <div class="shop_table">
     <table>
       <% if @bundle_length > 0 %>
