--- a/app/views/shop/show_entire_room.html.erb
+++ b/app/views/shop/show_entire_room.html.erb
@@ -20,9 +20,9 @@
 
         <p  class="shop_main_image_name">
           <% if @bundle.image_name_set.blank?  %>
-              <%= cl_image_tag("default_image_all.png", width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png")%>
+              <%= cl_image_tag("default_image_all.png", width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png")%>
           <% else %>
-              <%= cl_image_tag(@bundle.image_name_set , width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png") %>
+              <%= cl_image_tag(@bundle.image_name_set , width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png") %>
           <% end%>
         </p>
       </div>
@@ -49,6 +49,9 @@
 
 
 <div class="shop_container">
+  <div class="shop_related_items">
+    Related Entire Room
+  </div>
   <div class="shop_table">
     <table>
       <% if @bundle_length > 0 %>
