--- a/app/views/shop/show_theme.html.erb
+++ b/app/views/shop/show_theme.html.erb
@@ -17,9 +17,9 @@
         <p class="shop_main_image_name">
 
           <% if @theme.image_name_selection.blank?  %>
-              <%= cl_image_tag("default_image_all.png", width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png")%>
+              <%= cl_image_tag("default_image_all.png", width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png")%>
           <% else %>
-              <%= cl_image_tag(@theme.image_name_selection , width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png") %>
+              <%= cl_image_tag(@theme.image_name_selection , width: 400,height:400,:crop => :fit,:default_image => "default_image_all.png") %>
           <% end%>
         </p>
       </div>
@@ -48,6 +48,9 @@
 
 
 <div class="shop_container">
+  <div class="shop_related_items">
+    Related Themes
+  </div>
   <div class="shop_table">
     <table>
       <% if @theme_length > 0 %>
